# OpenGL-Snake

./: .gitignore  CMakeLists.txt
include/me/: shape_factory.h  snake.h
src/: main.c  shape_factory.c  snake.c
